objects/School__c.object
<CustomObject>
    <label>School</label>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Income</label>
        <summarizedField>Student__c.Fees__c</summarizedField>
        <summaryForeignKey>Student__c.Studying_at__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OPEN</fullName>
                </value>
                <value>
                    <fullName>CLOSED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branches__c</fullName>
        <label>Branches</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chandanagar</fullName>
                </value>
                <value>
                    <fullName>Miyapur</fullName>
                </value>
                <value>
                    <fullName>Kukatpally</fullName>
                </value>
                <value>
                    <fullName>Ameerpet</fullName>
                </value>
                <value>
                    <fullName>Lakdikapool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SchoolId__c</fullName>
        <label>SchoolId</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriggerCount__c</fullName>
        <label>TriggerCount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriggeredInsert__c</fullName>
        <label>TriggeredInsert</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggeredUpdate__c</fullName>
        <label>TriggeredUpdate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_the_school__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close the school?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Students__c</fullName>
        <label>Count of Students</label>
        <summaryForeignKey>Student__c.Studying_at__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <recordTypes>
        <fullName>ReadonlyLayout</fullName>
        <active>true</active>
        <label>ReadonlyLayout</label>
    </recordTypes>
    <validationRules>
        <fullName>AreaMandate</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Area__c )</errorConditionFormula>
        <errorDisplayField>Area__c</errorDisplayField>
        <errorMessage>Area Should be mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ClosedRecordLock</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c, &apos;CLOSED&apos;)</errorConditionFormula>
        <errorMessage>Editing is not Allowed for a Closed Record</errorMessage>
    </validationRules>
</CustomObject>